--- a/quiche/BUILD.bazel
+++ b/quiche/BUILD.bazel
@@ -19,14 +19,15 @@ load(
     "io_tests_srcs",
     "io_tool_support_hdrs",
     "io_tool_support_srcs",
-    "moqt_client_hdrs",
-    "moqt_client_srcs",
+    "moq_chat_hdrs",
+    "chat_client_hdrs",
+    "chat_client_srcs",
     "moqt_hdrs",
     "moqt_tests_support_hdrs",
     "moqt_tests_support_srcs",
     "moqt_tests_srcs",
-    "moqt_server_hdrs",
-    "moqt_server_srcs",
+    "chat_server_hdrs",
+    "chat_server_srcs",
     "moqt_srcs",
     "oblivious_http_hdrs",
     "oblivious_http_srcs",
@@ -516,48 +517,61 @@ cc_test(
 )
 
 cc_library(
-    name = "moqt_client_library",
-    srcs = moqt_client_srcs,
-    hdrs = moqt_client_hdrs,
+    name = "moq_chat_library",
+    srcs = [],
+    hdrs = moq_chat_hdrs,
     deps = [
         ":moqt",
-        ":quiche_core",
-        "@com_google_absl//absl/strings",
-    ],
-)
-
-cc_binary(
-    name = "moqt_client",
-    srcs = [
-        "quic/moqt/tools/chat_client_bin.cc",
-    ],
-    deps = [
-        ":moqt",
-        ":moqt_client_library",
         ":quiche_core",
         "@com_google_absl//absl/strings",
     ],
 )
 
 cc_library(
-    name = "moqt_server_library",
-    srcs = moqt_server_srcs,
-    hdrs = moqt_server_hdrs,
+    name = "chat_client_library",
+    srcs = chat_client_srcs,
+    hdrs = chat_client_hdrs,
     deps = [
         ":moqt",
+        ":moq_chat_library",
         ":quiche_core",
         "@com_google_absl//absl/strings",
     ],
 )
 
 cc_binary(
-    name = "moqt_server",
+    name = "chat_client",
     srcs = [
-        "quic/moqt/tools/moqt_ingestion_server_bin.cc",
+        "quic/moqt/tools/chat_client_bin.cc",
     ],
     deps = [
         ":moqt",
-        ":moqt_server_library",
+        ":chat_client_library",
+        ":quiche_core",
+        "@com_google_absl//absl/strings",
+    ],
+)
+
+cc_library(
+    name = "chat_server_library",
+    srcs = chat_server_srcs,
+    hdrs = chat_server_hdrs,
+    deps = [
+        ":moqt",
+        ":moq_chat_library",
+        ":quiche_core",
+        "@com_google_absl//absl/strings",
+    ],
+)
+
+cc_binary(
+    name = "chat_server",
+    srcs = [
+        "quic/moqt/tools/chat_server_bin.cc",
+    ],
+    deps = [
+        ":moqt",
+        ":chat_server_library",
         ":quiche_core",
         "@com_google_absl//absl/strings",
     ],
